FIX (minor) spacing fixes for page intro

--- a/src/patterns/breadcrumbs/_breadcrumbs.scss
+++ b/src/patterns/breadcrumbs/_breadcrumbs.scss
@@ -27,7 +27,6 @@
 // This will override above settings to allow for collapsing margins with subsequent content blocks
 .breadcrumbs--wrapper {
     margin-top: 1em;
-    margin-bottom: 1em;
 
     .content {
         margin-top: 0;
